--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	* fix i2p SAM protocol parsing of quoted messages
+	* expose i2p peer destination in peer_info
+	* fix i2p tracker announces
 	* fix web seed request for renamed single-file torrents
 	* fix issue where web seeds could disappear from resume data
 	* extend save_resume with additional conditional flags
